fix: change z-index in dropdown

--- a/scss/blocks/_header-select.scss
+++ b/scss/blocks/_header-select.scss
@@ -32,6 +32,7 @@
   border-radius: 0 0 4px 4px;
   border: $border;
   background: #fff;
+  z-index: 2;
 }
 
 .header-select__dropdown-item {
