--- a/scss/blocks/_nav-dropdown.scss
+++ b/scss/blocks/_nav-dropdown.scss
@@ -53,6 +53,7 @@
   border-radius: 0 0 4px 4px;
   border: $border;
   background: #fff;
+  z-index: 2;
 }
 
 .nav-dropdown__item {
