--- a/scss/main.css
+++ b/scss/main.css
@@ -211,6 +211,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 0 0 4px 4px;
   border: 2px solid #f5f5f5;
   background: #fff;
+  z-index: 2;
 }
 
 .header-select__dropdown-item {
@@ -434,6 +435,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 0 0 4px 4px;
   border: 2px solid #f5f5f5;
   background: #fff;
+  z-index: 2;
 }
 
 .nav-dropdown__item {
